--- a/WebUI/partialPage/_home.html
+++ b/WebUI/partialPage/_home.html
@@ -1,3 +1,4 @@
-﻿{{c.SetMenu()}}
-welcome to home. 2 
-{{c.Welcome}}
+﻿<div class="jumbotron">
+    <h1>{{home.Welcome}}</h1>
+    <p>This is just case study. </p>
+</div>
