--- a/WebUI/partialPage/onePost.html
+++ b/WebUI/partialPage/onePost.html
@@ -1,4 +1,4 @@
-﻿<div class="panel panel-warning">
+﻿<div class="panel panel-primary">
     <div class="panel-heading">
         {{post.Title}}
         <div class="pull-right">
